# etl

./: .env.example  .gitignore  README.md  installation.txt  main.py  pyproject.toml  render.yaml  requirements.txt  setup.cfg
.devcontainer/: devcontainer.json
credentials/: README.md
data/: state.json
data/interim/alegra/: categorias.csv  facturas.csv  productos.csv
data/interim/peluqueria/: peluqueria_2023.csv  peluqueria_2024.csv  peluqueria_2025.csv  peluqueria_2026.csv
data/interim/ventas/: 2023_ABRIL.csv  2023_AGOSTO.csv  2023_DICIEMBRE.csv  2023_ENERO.csv  2023_FEBRERO.csv  2023_JULIO.csv  2023_JUNIO.csv  2023_MARZO.csv  2023_MAYO.csv  2023_NOVIEMBRE.csv  2023_OCTUBRE.csv  2023_SEPTIEMBRE.csv  2024_ABRIL.csv  2024_AGOSTO.csv  2024_DICIEMBRE.csv  2024_ENERO.csv  2024_FEBRERO.csv  2024_JULIO.csv  2024_JUNIO.csv  2024_MARZO.csv  2024_MAYO.csv  2024_NOVIEMBRE.csv  2024_OCTUBRE.csv  2024_SEPTIEMBRE.csv  2025_ABRIL.csv  2025_AGOSTO.csv  2025_DICIEMBRE.csv  2025_ENERO.csv  2025_FEBRERO.csv  2025_JULIO.csv  2025_JUNIO.csv  2025_MARZO.csv  2025_MAYO.csv  2025_NOVIEMBRE.csv  2025_OCTUBRE.csv  2025_SEPTIEMBRE.csv  2026_ABRIL.csv  2026_ENERO.csv  2026_FEBRERO.csv  2026_MARZO.csv
data/processed/: peluqueria.csv  ventas.csv
data/sources/Peluqueria/: 2023.xlsx  2024.xlsx  2025.xlsx  2026.xlsx  ~$2023.xlsx
data/sources/Ventas/: 2023.xlsx  2024.xlsx  2025.xlsx  2026.xlsx
src/: etl_monitor.py
src/alegra/: constants.py  extract.py  load.py  pipeline.py  transform.py
src/calendar/: auth.py  constants.py  extract.py  load.py  pipeline.py  transform.py
src/config/: __init__.py  client_secrets.json  settings.py  token.json
src/dashboard/: __init__.py  main.py  utils.py
src/peluqueria/: __init__.py  constants.py  extract.py  load.py  main.py  pipeline.py  transform.py
src/ventas/: __init__.py  constants.py  extract.py  load.py  main.py  pipeline.py  transform.py
tests/: test_alegra_transform.py  test_calendar_transform.py  test_peluqueria_transform.py  test_ventas_transform.py
(+8 files in other folders)
