[project]
name = "etl-tienda-mascotas"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "rich>=13.0",
    "pandas>=2.0",
    "openpyxl>=3.1",
    "google-auth>=2.0",
    "google-auth-oauthlib>=1.0",
    "google-api-python-client>=2.0",
    "requests>=2.31",
    "python-dotenv>=1.0",
    "pandas-stubs>=3.0.0.260204",
    "streamlit>=1.56.0",
    "watchdog>=6.0.0",
    "plotly>=5.0",
    "scipy>=1.17.1",
    "scikit-learn>=1.4",
    "statsmodels>=0.14",
    "holidays>=0.46",
]

[tool.basedpyright]
# Mismo entorno que `uv sync` / desarrollo (pandas-stubs está en .venv)
venvPath = "."
venv = ".venv"
include = ["src"]
pythonVersion = "3.12"
reportMissingTypeStubs = "none"

[tool.pyright]
# Compatibilidad con Pyright clásico
venvPath = "."
venv = ".venv"
include = ["src"]
pythonVersion = "3.12"
reportMissingTypeStubs = "none"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "flake8>=7.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
